--- a/PS/문제리스트.md
+++ b/PS/문제리스트.md
@@ -10,5 +10,6 @@
 <br><br>
 
 # 문제리스트
-* [백준 1967](./Solve/Baekjoon1967)
+* [백준 1967](Solve/Baekjoon1967.md)
 * [백준 10610](Solve/Baekjoon10610.md)
+* [백준 1744](Solve/Baekjoon1744.md)
