--- a/PS/문제리스트.md
+++ b/PS/문제리스트.md
@@ -13,3 +13,4 @@
 * [백준 1967](Solve/Baekjoon1967.md)
 * [백준 10610](Solve/Baekjoon10610.md)
 * [백준 1744](Solve/Baekjoon1744.md)
+* [백준 1963](Solve/Baekjoon1963.md)
