자바 코딩 컨벤션 완성

--- a/Java/코딩컨벤션.md
+++ b/Java/코딩컨벤션.md
@@ -89,3 +89,359 @@ void doNothing () {}
 
 <br>
 
+## **공백**
+
+<br>
+
+**세로 공백**
+
+- 클래스의 필드, 생성자, 메서드, 중첩 클래스, 초기화 부분엔 하나의 빈 줄을 넣어줍니다.
+    - 예외: 두개의 연속 필드 사이에 빈 줄은 선택사항이다.
+    - 예외: 열거형 상수 사이의 빈줄은 허용된다.
+
+        ```java
+        private enum Answer {
+        	YES,
+        	NO
+        }
+
+        or
+
+        private enum Suit { CLUBS, HEARTS, SPADES, DIAMONDS }
+        ```
+
+
+<br>
+
+**가로 공백**
+
+- if, for, catch 같은 예약어 뒤에 오는 여는 괄호( `(` ) 사이에 공백
+- else, catch 에서 닫는 괄호( `}` ) 사이에 공백
+- 예외 : `@SomeAnnotation({a, b})` 
+          `String[][] x = {{"foo"}};`  {{ 사이에 공백이 필요없다.
+- 이항 or 삼항 연산자 앞 뒤에 공백을 넣습니다.
+    - `<T extends Foo & Bar>`  & 연산자 앞 뒤 공백
+    - `catch (FooException | BarException e)`  | 앞 뒤 공백
+    - `for (String bar : Bar)`  향상된 반복문 : 앞 뒤 공백
+    - `(String str) → str.length()` 람다 식의 화살표 앞 뒤 공백
+- ( `::` ) 는 공백이 필요없다. `Object::toString`
+- ( `.` ) 는 공백이 필요없다. `object.toString()`
+- `,:;` or ( `)` ) 뒤에 공백
+- `//` 양쪽 or 줄 끝에 공백 (단, 필수는 아니다)
+- 선언의 유형과 변수 사이 `List<String> list`
+- 배열 두 중괄호 안은 둘다 선택사항이다.
+    - `new int[] {5, 6}`   or  `new int[] { 5, 6 }`
+- 타입 어노테이션 과 `[]` 또는 `...` 사이
+
+<br>
+
+## 수평 정렬 (추천하지 않는다)
+
+```java
+// 좋은 방법
+private int x;
+private Color color;
+
+// 허용은 하지만, 추천 x, 추후 유지보수에도 악영향을 미침
+private int   x;
+private Color color;
+```
+
+<br>
+
+## 변수 선언
+
+<br>
+
+**변수**
+
+- 변수 선언은 하나의 변수만 선언합니다.
+    - `int a, b;` 는 사용하지 않습니다.
+- 필요할 때 선언합니다. 지역 변수는 범위를 최소화하기 위해 처음 사용되는 지점과 가깝게 선언합니다.
+
+<br>
+
+**배열**
+
+```java
+new int[] {
+	0, 1, 2, 3
+}
+or
+new int[] {
+	0,
+	1,
+	2,
+	3
+}
+or
+new int[] {
+	0, 1,
+	2, 3
+}
+or
+new int[] {0, 1, 2, 3}
+```
+
+모두 허용됩니다.
+
+- C-style 선언은 사용하지 않습니다.
+    - `String[] args` 허용  ,  `String args[]` 허용하지 않음
+
+<br>
+
+**Switch문**
+
+- 들여쓰기는 2공백을 사용합니다.
+- fall through(하나의블록에 끝나는게 없어 다음 블록까지 실행되는것) 일 경우에는 주석을 달아주어야 합니다. 일반적으로는 //fall through 라고 달아줍니다.
+
+```java
+	switch (input) {
+  case 1:
+  case 2:
+    prepareOneOrTwo();
+    // fall through
+  case 3:
+    handleOneTwoOrThree();
+    break;
+  default:
+    handleLargeNumber(input);
+}
+```
+
+- default 코드가 없더라도 `default:` 블록을 추가해줍니다.
+
+<br>
+
+**어노테이션(Annotations)**
+
+- 어노테이션은 라인당 하나입니다.
+
+```java
+@Override
+@Nullable
+public String getNameIfPresent() { ... }
+```
+
+- 예외
+    - 하나의 매개 변수랑 사용할경우에는 한줄에 함께 사용할 수 있습니다.
+
+    ```java
+    @Override public int hashCode() { ... }
+    ```
+
+    (허나 보통의 경우 이 방법은 잘 사용 안하는것 같습니다.)
+
+    - 필드에 적용되는 주석은 여러 주석이 같은 줄에 나열될 수 있습니다.
+
+    ```java
+    @Partial @Mock DataLoader 로더 ;
+    ```
+
+<br><br>
+
+## 주석
+
+```java
+/*
+ * This is          // And so           /* Or you can
+ * okay.            // is this.          * even do this. */
+ */
+```
+
+/* ... */ 스타일을 사용하는 경우 *로 시작하고 *로 정렬해줍니다.
+
+<br><br>
+
+## 제어자(Modifiers)
+
+java에서 권장하는 순서입니다.
+
+```java
+public protected private abstract default static final transient volatile synchronized native strictfp
+```
+
+<br><br>
+
+## 숫자 리터럴
+
+long타입은 대문자 `L`을 붙여줍니다.  소문자를 사용할 경우 `1`과 `l`이 헷갈릴 수 있습니다.
+
+<br><br>
+
+## 네이밍
+
+<br>
+
+**공통규칙**
+
+- 문자와 숫자만 사용하며 몇몇 예외경우에만 언더바( `_` )를 허용합니다.
+
+<br>
+
+**패키지이름**
+
+- 패키지 이름은 모두 소문자로 사용합니다.
+    - ex) `com.example.deepspace` OK
+    - ex) `com.example.deepSpace`, `com.exampmle.deep_space`  No
+
+<br>
+
+**클래스이름**
+
+- UpperCamelCase 로 작성됩니다.
+    - ex) `Character` or `ImmutableList`
+- 테스트클래스의 이름은 클래스 + Test 로 짓습니다.
+    - ex) `HashTest` or `HashIntegrationTest`
+
+<br>
+
+**메소드이름**
+
+- 메서드 이름은 lowerCamelCase로 작성됩니다.
+    - ex) `sendMessage` or `stop`
+- JUnit 테스트 메서드 이름에 밑줄을 표시해 이름의 논리적 구성 요소를 구분할 수 있습니다. 각 구성요소는 lowerCamelCase로 작성합니다.
+    - ex) `methodUnderTest_state`   , `pop_emptyStack`
+    - 테스트 방법의 이름을 지정하는것은 정해진 방법이 없습니다.
+
+<br>
+
+**상수이름**
+
+- 상수 이름은 CONSTANT_CASE를 사용합니다.
+- 상수는 내용이 완전히 변경되지 않고 메서드에 감지할 수 있는 부작용이 없는 정적 최종필드 입니다.
+- 인스턴스가 변경될 수 있는 경우 상수가 아닙니다.
+
+```java
+// Constants
+static final int NUMBER = 5;
+static final ImmutableList<String> NAMES = ImmutableList.of("Ed", "Ann");
+static final ImmutableMap<String, Integer> AGES = ImmutableMap.of("Ed", 35, "Ann", 32);
+static final Joiner COMMA_JOINER = Joiner.on(','); // because Joiner is immutable
+static final SomeMutableType[] EMPTY_ARRAY = {};
+enum SomeEnum { ENUM_CONSTANT }
+
+// Not constants
+static String nonFinal = "non-final";
+final String nonStatic = "non-static";
+static final Set<String> mutableCollection = new HashSet<String>();
+static final ImmutableSet<SomeMutableType> mutableElements = ImmutableSet.of(mutable);
+static final ImmutableMap<String, SomeMutableType> mutableValues =
+    ImmutableMap.of("Ed", mutableInstance, "Ann", mutableInstance2);
+static final Logger logger = Logger.getLogger(MyClass.getName());
+static final String[] nonEmptyArray = {"these", "can", "change"};
+```
+
+<br>
+
+**상수가 아닌 필드 이름**
+
+- 상수가 아닌 필드 이름은 lowerCamelCase로 작성됩니다.
+    - ex) `computedValues`  or `index`
+
+<br>
+
+**매개변수, 지역 변수**
+
+- lowerCamelCase로 작성됩니다.
+
+<br>
+
+**유형 변수 이름**
+
+- 두가지 방식중 하나를 사용합니다.
+- 단일 대문자, 선택적으로 숫자가 뒤따릅니다. `E` , `T`, `X`, `T2`
+- 클래스에 사용하는 형식으 이름 뒤에 대문자가 옵니다. `RequestT`, `FooBarT`
+
+<br>
+
+**카멜 케이스 정의**
+
+- "XML HTTP request"  → "XmlHttpRequest"
+- "new customer ID" → "newCustomerId"
+- "inner stopwatch" → "innerStopwatch"
+- "supports IPv6 on iOS?" → "supportsIpv6OnIos"
+- "YouTube importer"  → "YouTubeImporter"  or "YoutubeImporter"
+
+<br><br>
+
+## 프로그래밍 관습
+
+- @Override 항상 사용
+- catch 예외를 무시하지 않는다. 비워놓는것이 의도된거라면 주석을 활용한다.
+
+    ```java
+    try {
+      int i = Integer.parseInt(response);
+      return handleNumericResponse(i);
+    } catch (NumberFormatException ok) {
+      // it's not numeric; that's fine, just continue
+    }
+    return handleTextResponse(response);
+    ```
+
+    예외적으로 test 케이스에서는 주석없이 무시될 수 있습니다.
+
+    ```java
+    try {
+      emptyStack.pop();
+      fail();
+    } catch (NoSuchElementException expected) {
+    }
+    ```
+
+- Static member는 클래스 이름으로 참조합니다.
+
+    ```java
+    Foo aFoo = ...;
+    Foo.aStaticMethod(); // good
+    aFoo.aStaticMethod(); // bad
+    somethingThatYieldsAFoo().aStaticMethod(); // very bad
+    ```
+
+- finalizer 종료자는 사용하지 않습니다.
+
+<br><br>
+
+## 자바독
+
+<br>
+
+**일반 양식**
+
+```java
+/**
+ * Multiple lines of Javadoc text are written here,
+ * wrapped normally...
+ */
+public int method(String p1) { ... }
+```
+
+or
+
+```java
+/** An especially short bit of Javadoc. */
+```
+
+기본양식은 항상 허용되지만, 한줄로 적을때는 `@return` 태그를 사용해서는 안됩니다.
+
+<br>
+
+**단락**
+
+- 하나의 빈줄은 정렬된 선행 별표 ( `*` ) 만 포함하고 비워줍니다.
+
+<br>
+
+**블록 태그**
+
+- 블록 태그는 `@param`, `@return`, `@throws`, `@deprecated` 순서로 나타냅니다.
+
+<br>
+
+**사용되는곳**
+
+- javadoc은 최소한 존재하는 public 클래스마다 or protected 멤버에 붙여줘야 합니다.
+
+> **팁**: 일반적인 실수는 간단한 javadoc을 형식으로 작성하는 것입니다.
+`/** @return the customer ID */` → `/** Returns the customer ID. */`
