--- a/PS/문제리스트.md
+++ b/PS/문제리스트.md
@@ -14,3 +14,4 @@
 * [백준 10610](Solve/Baekjoon10610.md)
 * [백준 1744](Solve/Baekjoon1744.md)
 * [백준 1963](Solve/Baekjoon1963.md)
+* [백준 2186](Solve/Baekjoon2186.md)
