--- a/DB/데이터구조.md
+++ b/DB/데이터구조.md
@@ -49,3 +49,17 @@
 테이블과 세그먼트, 익스텐트 관계를 정리한 것이 아래그림입니다.
 
 <그림 7.8>
+
+# 실제 흐름을 통한 각 동작 확인
+
+1. 데이터베이스 생성
+    1. 우선 데이터베이스의 생성입니다. 이때 SYSTEM 테이블스페이스를 시작으로 몇 가지 테이블 스페이스가 생성되ㅣㅂ니다.
+2. 사용자용 테이블 스페이스의 생성
+    1. 사용자용 테이블 스페이스를 생성합니다.
+    2. 사용자용 테이블 스페이스를 생성하는 것은 데이터베이스를 생성할 때 같이 해도 상관없습니다.
+3. 테이블을 테이블스페이스에 생성
+    1. 테이블스페이스에 테이블을 생성합니다.
+    2. 이 시점에서 내부가 비어 있는 상태로 익스텐트가 생성됩니다.
+    3. 익스텐트가 생성된 후에 데이터 입력(INSERT)이 수행되며, 익스텐트의 비어 있는 블록에 데이터를 입력합니다.
+    4. 'PCTFREE'라는 임계치에 도달하면 해당 블록에 입력하는 것을 멈추고 다음으로 비어 있는 블록에 데이터를 입력합니다.
+    5. 데이터의 입력이  계속되어 익스텐트가 가득 차게 되면 테이블스페이스가 가지고 있는 빈 공간을 사용해 새로운 익스텐트를 테이블에 할당하고 데이터를 입력하게 합니다.
