--- a/DB/데이터구조.md
+++ b/DB/데이터구조.md
@@ -50,6 +50,8 @@
 
 <그림 7.8>
 
+<br><br>
+
 # 실제 흐름을 통한 각 동작 확인
 
 1. 데이터베이스 생성
@@ -63,3 +65,33 @@
     3. 익스텐트가 생성된 후에 데이터 입력(INSERT)이 수행되며, 익스텐트의 비어 있는 블록에 데이터를 입력합니다.
     4. 'PCTFREE'라는 임계치에 도달하면 해당 블록에 입력하는 것을 멈추고 다음으로 비어 있는 블록에 데이터를 입력합니다.
     5. 데이터의 입력이  계속되어 익스텐트가 가득 차게 되면 테이블스페이스가 가지고 있는 빈 공간을 사용해 새로운 익스텐트를 테이블에 할당하고 데이터를 입력하게 합니다.
+
+<br><br>
+
+# 프로세스에서 본 데이터 구조
+
+오라클의 메모리 내부의 동작에 대해 검색(SELECT)와 변경(UPDATE)을 한번 살펴보겠습니다.
+
+여기서는 검색은 풀 스캔이라고 가정하겠습니다.
+
+<br>
+
+### 데이터 검색
+
+ <그림 7.10>
+
+오라클은 해당 테이블의 익스텐트를 조사하고 버퍼 캐시에 존재하지 않는 블록을 처음부터 읽어옵니다.
+
+<br>
+
+### 데이터 변경
+
+데이터 변경은 인덱스를 사용해 한 건만을 변경한다고 가정하겠습니다.
+
+<그림 7.11>
+
+1. 우선 인덱스에 접근하고 인덱스의 관리 정보를 토대로 인덱스의 루트 블록(가장 위의 블록)을 찾아갑니다.
+2. 이어서 루트 블록에서 다음 블록의 주소를 조사하고, 그 블록이 캐시에 적재되어 있지 않다면 디스크에서 읽어옵니다.
+3. 이렇게 반복해서 필요한 해당 데이터 블록을 찾습니다.
+4. 대상 테이블 데이터의 블록이 캐시에 적재되어 있지 않다면 해당 블록만을 읽어옵니다.
+5. 그리고 캐시상에서 블록의 데이터를 변경합니다.
