오라클 데이터구조 이미지 추가

--- a/DB/데이터구조.md
+++ b/DB/데이터구조.md
@@ -28,27 +28,39 @@
 
 예를 들어, 데이터 파일 안에 보관된 '테이블'이나 '로우(행)'는 논리 구조입니다.
 
-오라클 전처의 데이터 구조는 아래와 같습니다.
+<br>
 
-<그림 7.5>
+오라클 전체의 데이터 구조는 아래와 같습니다.
+
+![image1](/Img/DB/데이터구조1.png)
+
+<br>
+
+### 오라클블록
 
 위의 그림을 토대로 작은 구조부터 차례대로 살펴보겠습니다. 가장 작은 구조(집합)는 **(오라클)블록**입니다. 블록은 8KB 같은 크기로 나뉜 공간을 말합니다. 이 블록 안에 한 건 이상의 데이터가 보관됩니다. 
 
-<그림 7.6>
+![image2](/Img/DB/데이터구조2.png)
 
 데이터가 입력(INSERT)되면, 이공간의 아래에서부터 차례대로 사용해나갑니다. 단 어느 정도 사용하면 데이터를 추가로 입력하지 않고, 앞으로 발생할 데이터의 변경을 대비해 빈 공간을 확보해둡니다.
 
+<br>
+
+### 익스텐트
+
 **익스텐트**는 연속된 블록의 집합입니다. 익스텐트 덕분에 각 블록의 위치가 아니라 각 인스텐트의 첫 위치와 블록의 개수만으로 데이터를 관리할 수 있으며, 관리 정보도 줄일 수 있게 되었습니다.
 
-<그림 7.7>
+![image3](/Img/DB/데이터구조3.png)
 
 또한, 데이터를 한 번에 읽어올 수 있으므로 테이블의 풀 스캔 성능을 향상할 수도 있습니다.
+
+### 세그먼트
 
 테이블이나 인덱스 등의 데이터를 한번 더 모은 익스텐트의 집합을 **세그먼트**라고 부릅니다.
 
 테이블과 세그먼트, 익스텐트 관계를 정리한 것이 아래그림입니다.
 
-<그림 7.8>
+![image4](/Img/DB/데이터구조4.png)
 
 <br><br>
 
@@ -78,7 +90,7 @@
 
 ### 데이터 검색
 
- <그림 7.10>
+ ![image5](/Img/DB/데이터구조5.png)
 
 오라클은 해당 테이블의 익스텐트를 조사하고 버퍼 캐시에 존재하지 않는 블록을 처음부터 읽어옵니다.
 
@@ -88,7 +100,7 @@
 
 데이터 변경은 인덱스를 사용해 한 건만을 변경한다고 가정하겠습니다.
 
-<그림 7.11>
+![image6](/Img/DB/데이터구조6.png)
 
 1. 우선 인덱스에 접근하고 인덱스의 관리 정보를 토대로 인덱스의 루트 블록(가장 위의 블록)을 찾아갑니다.
 2. 이어서 루트 블록에서 다음 블록의 주소를 조사하고, 그 블록이 캐시에 적재되어 있지 않다면 디스크에서 읽어옵니다.
